<resources>

    <string name="app_name">TripCard</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_meal_list">Levart</string>
    <string name="title_activity_new_meal">NewMealActivity</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_favorite">Favorites</string>
    <string name="action_new">Add a Meal</string>
    <string name="menu_title">My Meals</string>
    <string name="card_title">Card Title</string>
    <string name="card_tag">#</string>
    <string name="card_location">Where is the Location?</string>
    <string name="card_location_colon">Location: </string>
    <string name="card_description">Share your knowledge and help others know this place...</string>
    <string name="card_author">Author</string>
    <string name="feedback_description">Thank you very much for your feedback to help us improve!</string>
    <string name="feedback_contact">Your Email(optional)</string>
    <string name="feedback_empty_warn">Sorry, feeback cannot be empty</string>
    <string name="save_button_text">Submit</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="read_card">Read</string>
    <string name="shuffle_card">Shuffle</string>
    <string name="submit">Submit</string>
    <string name="detail_activity_feedback">Feedback</string>
    <string name="write_card">Write</string>
    <string name="already_save">Save</string>
    <array name="ratings_array">
        <item>Please Select</item>
        <item>Transportation</item>
        <item>Attraction</item>
        <item>Activity</item>
        <item>History</item>
        <item>Season</item>
        <item>Animal</item>
        <item>Schedule</item>
        <item>Lodging</item>
        <item>Restaurant</item>
        <item>Others</item>
    </array>

    <string name="title_activity_trip_card_detail">TripCard</string>
    <string name="new_card_cancel"></string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_google_places_autocomplete">GooglePlacesAutocomplete</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_feedback">Feedback</string>


</resources>