<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">

    <com.parse.ParseImageView
        android:id="@+id/meal_preview_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".20"
        android:layout_gravity="center"
        android:src="@drawable/new_card_camera_button"/>

<!--
        <EditText
            android:id="@+id/meal_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/card_title"
            android:ems="100"
            android:inputType="text" >
            <requestFocus />
        </EditText>


    -->


    <AutoCompleteTextView
        android:id="@+id/cardLocationAutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_location"
        android:layout_marginTop="5dp"
        android:ems="100">
        <requestFocus />
    </AutoCompleteTextView>

    <EditText
        android:id="@+id/card_description"
        android:layout_width="wrap_content"
        android:gravity="top"
        android:layout_height="150dp"
        android:ems="100"
        android:hint="@string/card_description"
        android:inputType="textMultiLine" >
        <requestFocus />
    </EditText>


    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp" >

        <TextView
            android:id="@+id/card_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_tag"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/rating_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </TableRow>

</LinearLayout>