<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/read_card_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/read_card_button_selector"
            android:background="#00000000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/read_card"/>

    </LinearLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/write_a_card_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/write_card_button_selector"
            android:background="#00000000"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/write_card"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <ImageButton
            android:id="@+id/already_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/already_save_button_selector"
            android:background="#00000000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/already_save"/>

    </LinearLayout>

</merge>
